--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -48,8 +48,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="200dp"
         android:layout_marginRight="99dp"
-        android:layout_marginBottom="10dp"
-        android:src="@drawable/backbutton" />
+        android:layout_marginBottom="10dp"/>
+        <!--android:src="@drawable/backbutton" -->
     <!--</RelativeLayout>-->
 
 
